--- a/Atividade01.html
+++ b/Atividade01.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atividade 01 - JS</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <h1>Atividade 01 - JS - Fariel</h1>
 </body>
 </html>
