--- a/Atividade01.html
+++ b/Atividade01.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 01 - JS</title>
+    <title>Atividade 01 - JS - Fariel</title>
 </head>
+
 <body>
     <h1>Atividade 01 - JS - Fariel</h1>
+    <div id="nome__completo">Nome</div>
+    <div id="idade__2024">Idade</div>
+    <div id="ano__nascimento">Nascimento</div>
+    <div id="dias__vividos">Dias Vivídos</div>
+<script src="./js/atividade01.js"></script>
 </body>
+
 </html>
