--- a/atividade02.html
+++ b/atividade02.html
@@ -11,7 +11,8 @@
     <h1>Desafio Complementar 02 - JS - Fariel</h1>
     <h3>Clique em cada função para interagir com elas</h3>
     <h2 onclick="jurosComposto()"><a href="#">Função 1 - Calculadora de juros compostos</a></h2>
-    <h2 onclick="descobrirSigno()"><a href="#">Função 2 - Saiba qual é seu signo</a></h2>
+    <h2 onclick="descobrirSigno()"><a href="#">Função 2 - Descubra qual é seu signo</a></h2>
+    <h2 onclick="idadeOutrosPlanetas()"><a href="#">Função 3 - Descubra qual seria sua idade em outros planetas do sistema solar</a></h2>
 <script src="./js/atividade02.js"></script>
 </body>
 
