--- a/atividade03.html
+++ b/atividade03.html
@@ -9,6 +9,8 @@
 
 <body>
     <h1>Desafio Complementar 03 - JS - Fariel</h1>
+    <h3>Clique na função para interagir com ela e veja a resposta no console.log()</h3>
+    <h2 onclick="calcParcelas()"><a href="#">Função: Quanto vai dar a parcela de minha compra?</a></h2>
 <script src="./js/atividade03.js"></script>
 </body>
 
