--- a/aula08.html
+++ b/aula08.html
@@ -6,7 +6,7 @@
     <title>Aula 08</title>
 </head>
 <body>
-    <h1>Aula 08</h1>
+    <h1>Aula 08 - Objetos</h1>
     <script src="./js/aula08.js"></script>
 </body>
 </html>
